Add postgresql infrastructure and errors handling

--- a/DevQuestions/src/DevQuestions.Web/DevQuestions.Web.csproj
+++ b/DevQuestions/src/DevQuestions.Web/DevQuestions.Web.csproj
@@ -13,6 +13,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\DevQuestions.Domain\DevQuestions.Domain.csproj" />
+      <ProjectReference Include="..\DevQuestions.Infrastructure.Postgresql\DevQuestions.Infrastructure.Postgresql.csproj" />
       <ProjectReference Include="..\DevQuestions.Presenters\DevQuestions.Presenters.csproj" />
     </ItemGroup>
 
