--- a/DevQuestions/src/DevQuestions.Application/DevQuestions.Application.csproj
+++ b/DevQuestions/src/DevQuestions.Application/DevQuestions.Application.csproj
@@ -14,7 +14,6 @@
 
     <ItemGroup>
       <Folder Include="Comments\" />
-      <Folder Include="Questions\Features\" />
     </ItemGroup>
 
     <ItemGroup>
@@ -26,6 +25,7 @@
     <ItemGroup>
       <PackageReference Include="FluentValidation" Version="12.0.0" />
       <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.9" />
       <PackageReference Include="Scrutor" Version="6.1.0" />
     </ItemGroup>
 
