--- a/DevQuestions/src/DevQuestions.Presenters/DevQuestions.Presenters.csproj
+++ b/DevQuestions/src/DevQuestions.Presenters/DevQuestions.Presenters.csproj
@@ -8,7 +8,6 @@
 
     <ItemGroup>
       <ProjectReference Include="..\DevQuestions.Application\DevQuestions.Application.csproj" />
-      <ProjectReference Include="..\DevQuestions.Contracts\DevQuestions.Contracts.csproj" />
       <ProjectReference Include="..\DevQuestions.Domain\DevQuestions.Domain.csproj" />
     </ItemGroup>
 
@@ -18,6 +17,7 @@
 
     <ItemGroup>
       <Folder Include="Comments\" />
+      <Folder Include="Questions\" />
     </ItemGroup>
 
 </Project>
