--- a/DevQuestions/src/DevQuestions.Application/DevQuestions.Application.csproj
+++ b/DevQuestions/src/DevQuestions.Application/DevQuestions.Application.csproj
@@ -7,13 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\DevQuestions.Contracts\DevQuestions.Contracts.csproj" />
       <ProjectReference Include="..\DevQuestions.Domain\DevQuestions.Domain.csproj" />
       <ProjectReference Include="..\Shared\Shared.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Comments\" />
     </ItemGroup>
 
     <ItemGroup>
@@ -27,6 +22,10 @@
       <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.9" />
       <PackageReference Include="Scrutor" Version="6.1.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Questions\" />
     </ItemGroup>
 
 </Project>
