fix dependency injection

--- a/DevQuestions/src/Questions/Questions.Presenters/Questions.Presenters.csproj
+++ b/DevQuestions/src/Questions/Questions.Presenters/Questions.Presenters.csproj
@@ -8,8 +8,10 @@
 
     <ItemGroup>
       <ProjectReference Include="../../Core/Framework/Framework.csproj" />
+      <ProjectReference Include="..\..\Core\Infrastructure\Infrastructure.S3\Infrastructure.S3.csproj" />
       <ProjectReference Include="..\Questions.Application\Questions.Application.csproj" />
       <ProjectReference Include="..\Questions.Contracts\Questions.Contracts.csproj" />
+      <ProjectReference Include="..\Questions.Infrastructure.Postgres\Questions.Infrastructure.Postgres.csproj" />
     </ItemGroup>
 
 </Project>
