--- a/DevQuestions/src/Core/Shared/Shared.csproj
+++ b/DevQuestions/src/Core/Shared/Shared.csproj
@@ -10,6 +10,7 @@
       <PackageReference Include="CSharpFunctionalExtensions" Version="3.6.0" />
       <PackageReference Include="FluentValidation" Version="12.0.0" />
       <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
+      <PackageReference Include="MediatR" Version="13.0.0" />
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.9" />
       <PackageReference Include="Scrutor" Version="6.1.0" />
     </ItemGroup>
